--- a/themes/bigspring-light/assets/scss/_custom.scss
+++ b/themes/bigspring-light/assets/scss/_custom.scss
@@ -1,2 +1,6 @@
 // This file is empty within the template
 // You can use it to override CSS from within your project
+
+.shadow,.feature-card:hover,.btn:hover,.btn:active,.btn:focus {
+    box-shadow:0 12px 24px 12px rgba(45,67,121,.1)!important;
+}
