--- a/themes/bigspring-light/assets/scss/_custom.scss
+++ b/themes/bigspring-light/assets/scss/_custom.scss
@@ -4,3 +4,8 @@
 .shadow,.feature-card:hover,.btn:hover,.btn:active,.btn:focus {
     box-shadow:0 12px 24px 12px rgba(45,67,121,.1)!important;
 }
+
+.banner p {
+    font-size: 20px;
+    font-weight: 500;
+}
