--- a/themes/bigspring-light/layouts/index.html
+++ b/themes/bigspring-light/layouts/index.html
@@ -52,7 +52,7 @@
 {{ if .enable }}
 {{ range $i,$p := .service_item }}
 {{if modBool $i 2}}
-<section class="section">
+<section class="section bg-light">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6 order-2 order-md-1">
@@ -83,15 +83,23 @@
   </div>
 </section>
 {{ else }}
-<section class="section bg-light">
+<section class="section">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-md-6 mb-4 mb-md-0">
-        <div {{if gt (len .images) 1}}class="slider" {{end}}>
+        {{ if .video.enable }}
+        {{ with .video }}
+        <div style="position: relative; padding-bottom: 56.25%; max-width: 750px; height: 0; overflow: hidden; border-radius: 5px;">
+          <iframe width=750 height=360 src="{{ .url }}" allowfullscreen style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe>
+        </div>
+        {{ end }}
+        {{ else }}
+        <div {{if gt (len .images) 1}} class="slider" {{end}}>
           {{ range .images }}
           <img src="{{ . | relURL }}" alt="" class="img-fluid">
           {{ end }}
         </div>
+        {{ end }}
       </div>
       <div class="col-md-6">
         <h2 class="section-title">{{ .title | markdownify }}</h2>
