--- a/themes/bigspring-light/layouts/partials/footer.html
+++ b/themes/bigspring-light/layouts/partials/footer.html
@@ -1,5 +1,6 @@
 <footer class="bg-light section pb-0">
   <div class="container">
+    {{ if or site.Menus.footer_left site.Menus.footer_middle site.Menus.footer_right }}
     <div class="row">
       <div class="col-md-3 col-sm-6 mb-5">
         {{ if site.Menus.footer_left }}
@@ -47,6 +48,7 @@
         {{ end }}
       </div>
     </div>
+    {{ end }}
     <div class="border-top border-default text-center py-4 mt-4">
       <small class="content">{{ site.Params.Copyright | markdownify }}</small>
     </div>
