--- a/themes/bigspring-light/layouts/index.html
+++ b/themes/bigspring-light/layouts/index.html
@@ -131,6 +131,7 @@
     </div>
   </div>
   {{ with .image }} <img src="{{ . | relURL }}" alt="" class="img-fluid w-100">{{ end }}
+  {{ with .youtube }} <div style="display: flex; justify-content: center; align-items: center;"><iframe width="700" height="400" src="https://www.youtube.com/embed/{{ . }}" title="YouTube video player" style="border-radius: 15px; overflow: hidden;" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>{{ end }}
 </section>
 {{ end }}
 {{ end }}
