--- a/themes/bigspring-light/layouts/index.html
+++ b/themes/bigspring-light/layouts/index.html
@@ -21,32 +21,6 @@
 </section>
 {{ end }}
 <!-- /banner -->
-
-<!-- feature -->
-{{ with .Params.feature }}
-{{ if .enable }}
-<section class="section bg-light">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-12 text-center">
-        <h2 class="section-title">{{ .title | markdownify }}</h2>
-      </div>
-      {{ range .feature_item }}
-      <div class="col-md-4 col-sm-6 mb-4">
-        <div class="feature-card text-center">
-          <i class="{{.icon}} mb-3"></i>
-          <h4 class="mb-2">{{ .name | title }}</h4>
-          <p>{{ .content | markdownify }}</p>
-        </div>
-      </div>
-      {{ end }}
-    </div>
-  </div>
-</section>
-{{ end }}
-{{ end }}
-<!-- /feature -->
-
 <!-- service -->
 {{ with .Params.service }}
 {{ if .enable }}
@@ -162,4 +136,18 @@
 {{ end }}
 <!-- /call to action -->
 
+<!-- CNCF -->
+{{ with .Params.cncf }}
+{{ if .enable }}
+<div class="banner text-center">
+  <p>Radius is a <a href="https://www.cncf.io/sandbox-projects/" class="banner-link">Cloud Native Computing Foundation Sandbox project</a></p>
+  <div class="img-container">
+    <img src="./images/cncf.svg" alt="cncf logo" width="500px"/>
+  </div>
 {{ end }}
+{{ end }}
+</div> 
+</div>
+<!-- /CNCF -->
+{{ end }}
+
