--- a/themes/bigspring-light/layouts/partials/footer.html
+++ b/themes/bigspring-light/layouts/partials/footer.html
@@ -37,7 +37,7 @@
           {{ with site.Params.logo}}
           <img width="{{site.Params.logo_width}}" class="img-fluid" src="{{ . | relURL }}" alt="{{ site.Title }}">
           {{ else }}{{site.Title}}{{end}}
-        </a> 
+        </a>
         <p class="mb-4">{{ site.Params.footer_content | markdownify }}</p>
         {{ with site.Params.social }}
         <ul class="list-inline social-icons">
@@ -47,13 +47,11 @@
         </ul>
         {{ end }}
       </div>
+    </div>
     {{ end }}
     <div class="text-center footer-info-text">
       <p>Copyright &copy; 2024, The Radius Authors</p>
-      <p>
-        The Linux Foundation has registered trademarks and uses trademarks. For a list of trademarks of The Linux Foundation, see
-        <a href="https://www.linuxfoundation.org/legal/trademark-usage" class="footer-link-text">Trademark Usage page.</a>
-      </p>
+      <p>The Linux Foundation has registered trademarks and uses trademarks. For a list of trademarks of The Linux Foundation, see<a href="https://www.linuxfoundation.org/legal/trademark-usage" class="footer-link-text">Trademark Usage page.</a></p>
     </div>
-  </footer>
+  </div>
 </footer>
