--- a/themes/bigspring-light/layouts/partials/footer.html
+++ b/themes/bigspring-light/layouts/partials/footer.html
@@ -49,9 +49,9 @@
       </div>
     </div>
     {{ end }}
-    <div class="text-center footer-info-text">
+    <div class="border-top border-default text-center py-4 mt-4">
       <p>Copyright &copy; 2024, The Radius Authors</p>
-      <p>The Linux Foundation has registered trademarks and uses trademarks. For a list of trademarks of The Linux Foundation, see<a href="https://www.linuxfoundation.org/legal/trademark-usage" class="footer-link-text">Trademark Usage page.</a></p>
+      <p>The Linux Foundation has registered trademarks and uses trademarks. For a list of trademarks of The Linux Foundation, see <a href="https://www.linuxfoundation.org/legal/trademark-usage" class="footer-link-text">Trademark Usage page.</a></p>
     </div>
   </div>
 </footer>
