Add CNCF website guidelines  (#19)
* Add google analytics id

Signed-off-by: Reshma Abdul Rahim <reshmarahim.abdul@microsoft.com>

* CNCF website guidelines

Signed-off-by: Reshma Abdul Rahim <reshmarahim.abdul@microsoft.com>

* CNCF website guidelines

Signed-off-by: Reshma Abdul Rahim <reshmarahim.abdul@microsoft.com>

* Cpyright changes

Signed-off-by: Reshma Abdul Rahim <reshmarahim.abdul@microsoft.com>

* Minor refactor

Signed-off-by: Reshma Abdul Rahim <reshmarahim.abdul@microsoft.com>

* Minor refactor to ncf banner

Signed-off-by: Reshma Abdul Rahim <reshmarahim.abdul@microsoft.com>

* remove duplicate div

Signed-off-by: Reshma Abdul Rahim <reshmarahim.abdul@microsoft.com>

---------

Signed-off-by: Reshma Abdul Rahim <reshmarahim.abdul@microsoft.com>

--- a/themes/bigspring-light/layouts/index.html
+++ b/themes/bigspring-light/layouts/index.html
@@ -162,4 +162,16 @@
 {{ end }}
 <!-- /call to action -->
 
+<!-- CNCF -->
+{{ with .Params.cncf }}
+{{ if .enable }}
+<div class="banner text-center">
+  <h2 class="section-title">{{ .title | markdownify }}</h2>
+    {{with .image}}<img src="{{ . | relURL }}" alt="" class="img-fluid" width="500px">{{end}}
 {{ end }}
+{{ end }}
+</div>
+<!-- /CNCF -->
+
+{{ end }}
+
